# QuizSaver

./: CMakeLists.txt  Main.qml  README.md  blureffect.cpp  blureffect.h  handle_info.cpp  handle_info.h  main.cpp  mem.h  the_best_json.cpp  the_best_json.h  windowmanager.cpp  windowmanager.h
